<resources>
    <string name="app_name">Bruco</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="next_button">Next</string>
    <string name="title_activity_registration">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember Me</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign In</string>
    <string name="social_network">Social Network</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="bruco">Bruco</string>
    <string name="create_new_account">Create New Account</string>
    <string name="send_recover">Send Recover</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="change_image">Change Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="display_username">Display UserNAme</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="friend_request_sent">Send Friend Request</string>
    <string name="last_seen">Last seen</string>
    <string name="enter_message">Enter Message</string>
    <string name="display_name">Display Name</string>
    <string name="_12_00">12:00</string>
    <string name="first_message">first message</string>
    <string name="online">Online</string>
    <string name="chat_log">CHAT_LOG</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="totalkeys">TOTALKEYS</string>
    <string name="last_key">Last Key :</string>
    <string name="prev_key">| Prev Key :</string>
    <string name="message_key">| Message Key :</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_message">send message</string>
    <string name="select_options">Select Options</string>
    <string name="signing_in">Signing in</string>
    <string name="wait_while_checking_credentials">Please wait while we are checking ur credentials</string>
    <string name="input_correct_data">Error During Registration Please input correct data</string>
    <string name="fill_password_filed">Please fill password field</string>
    <string name="try_again_later">You tried many times, Try again later</string>
    <string name="recovery_message_sent_to_email">Recovery Message Sent To Email</string>
    <string name="fill_email_input">Please fill email field</string>
    <string name="main_page">Main Page</string>
    <string name="loading_profile_data">Loading Profile Data</string>
    <string name="wait_while_loading_user_data">Please wait while loading the user data</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend_this_person">Unfriend this person</string>
    <string name="error_while_sending_request">there were some error while sending request</string>
    <string name="create_account">Create Account</string>
    <string name="registering_user">Registering user</string>
    <string name="wait_while_creating_account">Please wait while we are creating your account</string>
    <string name="fill_all_inputs">Plase fill all inputs</string>
    <string name="error_while_registering">Error while Registering</string>
    <string name="error_while_registration">Error During Registration Please input correct data</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="wait_while_uploading_image">Wait while Uploading Image</string>
    <string name="image_uploaded_successfully">image uploaded successfully</string>
    <string name="error_while_upploading">error while uploading</string>
    <string name="users">Users</string>
</resources>