<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >

    <include layout="@layout/app_tool_bar" android:id="@+id/registration_toolbar"/>

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        android:layout_below="@id/registration_toolbar"
        />

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/create_new_account"
        android:textSize="@dimen/cna_text_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/registration_toolbar"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/outside_margin">



        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/username"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/registration_fields_margin_top"
            android:textColorHint="@color/colorAccent"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            android:textColorHint="@color/colorAccent"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:textColorHint="@color/colorAccent"/>

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/next_margin_top"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            />
        <!--android:elevation="0dp"-->

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>